// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customer university navigation is a Vue instance 1`] = `
<div>
  <div
    class="cluster-navigation"
    id="123qweasd"
  >
    <div
      class="container"
    >
      <h4
        class="cluster-navigation__title"
      >
        
      Custom software development pricing strategies
    
      </h4>
       
      <div
        class="cluster-navigation__list"
      />
       
      <nextpreviewbuttons-stub
        left="true"
      />
    </div>
  </div>
</div>
`;

exports[`Customer university navigation is a Vue instance with equal id 1`] = `
<div>
  <div
    class="cluster-navigation"
    id="YAGi7REAACMAgV8d"
  >
    <div
      class="container"
    >
      <h4
        class="cluster-navigation__title"
      >
        
      Custom software development pricing strategies
    
      </h4>
       
      <div
        class="cluster-navigation__list"
      />
       
      <nextpreviewbuttons-stub
        left="true"
      />
    </div>
  </div>
</div>
`;
